@@ -1,3 +1,6 @@
+8 April 2019: Wouter
+	- Fix to use event_assign with libevent for thread-safety.
+
 5 April 2019: Wouter
 	- Fix to reinit event structure for accepted TCP (and TLS) sockets.
 
